Logtalk/examples/errors/misspell.lgt

:- object(misspell).
		
	output(A) :-
		writr(A).
	
:- end_object.

